--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 							slider.index < slider.item.length -1 ? ++slider.index : slider.index = 0;
 							S();
 						}
-						slider.timer = setInterval(slider.S,4000);
+						//slider.timer = setInterval(slider.S,4000);
 						$("#toggle span,.sliderbtn").hover(
 							function(){
 								clearInterval(slider.timer);			
