--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>臭皮匠建站--联系我们</title>
+		<meta name="keywords" content="网站建设,三个臭皮匠赛过诸葛亮，臭皮匠，臭皮匠建站,前端开发，网页设计" />
+		<meta name="description" content="臭皮匠，专业的网站建设专家,互联网新闻资讯,专注前端开发" />
 		<link type="text/css" rel="stylesheet" href="static/css/style.css?v=1"/>
 		<style type="text/css">
 			html,body{
