--- a/newslist.html
+++ b/newslist.html
@@ -9,11 +9,14 @@
 
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
-		<ul>
-			<li><strong>2012年02月26日</strong></li>
-			<li><a href="20120226/news2.html">Windows 8将弃用Windows Live标志</a></li>
-			<li><a href="20120226/news1.html">“魔兽”大限将至 暴雪网易再博弈</a></li>
-		</ul>
+		<dl>
+			<dt><strong>2012年02月27日</strong></dt>
+			<dd><a href="20120227/news2.html">Facebook否认窥探用户手机短信：仅用于测试</a></dd>
+			<dd><a href="20120227/news1.html">盛大文学再递IPO申请 拟流血上市</a></dd>
+			<dt><strong>2012年02月26日</strong></dt>
+			<dd><a href="20120226/news2.html">Windows 8将弃用Windows Live标志</a></dd>
+			<dd><a href="20120226/news1.html">“魔兽”大限将至 暴雪网易再博弈</a></dd>
+		</dl>
 
 		<h2><a href="http://www.8cuo.org">臭皮匠---您身边的网站建设专家</a></h2>
 	</body>
