--- a/20120227/news2.html
+++ b/20120227/news2.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>臭皮匠建站--</title>
-		<meta name="keywords" content="网站建设,win8,windows live标识,操作系统" />
+		<meta name="keywords" content="网站建设,Fackbook,用户隐私，马克" />
 		<meta name="description" content="臭皮匠，专业的网站建设专家,互联网新闻资讯,专注前端开发" />
 	</head>
 
