--- a/newslist.html
+++ b/newslist.html
@@ -11,6 +11,7 @@
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
 			<dt><strong>2012年02月27日</strong></dt>
+			<dd><a href="20120227/news3.html">这款眼镜赛手机 打电话上网“摇头晃脑”就行了</a></dd>
 			<dd><a href="20120227/news2.html">Facebook否认窥探用户手机短信：仅用于测试</a></dd>
 			<dd><a href="20120227/news1.html">盛大文学再递IPO申请 拟流血上市</a></dd>
 			<dt><strong>2012年02月26日</strong></dt>
