--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 		<h1 id="logo">
 			<a href="http://www.8cuo.org" title="臭皮匠" hidefocus="true">臭皮匠</a>
 		</h1>
+		<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"> </script>
+		<script type="text/javascript"><!--
+			google_ad_client = "ca-pub-2707899153016346";
+			/* google_ad_1 */
+			google_ad_slot = "0126904361";
+			google_ad_width = 250;
+			google_ad_height = 250;
+			//-->
+		</script>
 		<div class="nav">
 			<ul id="nav">
 				<li class="current"><a href="javascript:;" hidefocus="true">首 &nbsp; 页</a></li>
