--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,12 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年02月29日</strong></dt>
+			<dd><a href="20120229/news2.html">库巴网将向淘宝联盟投1亿</a></dd>
+			<dd><a href="20120229/news1.html">新浪微博注册用户突破3亿大关</a></dd>
+			<dt><strong>2012年02月28日</strong></dt>
+			<dd><a href="20120228/news2.html">季琦：创业路上困难决定成就</a></dd>
+			<dd><a href="20120228/news1.html">一线团购站投诉解决率仅四成</a></dd>
 			<dt><strong>2012年02月27日</strong></dt>
 			<dd><a href="20120227/news3.html">这款眼镜赛手机 打电话上网“摇头晃脑”就行了</a></dd>
 			<dd><a href="20120227/news2.html">Facebook否认窥探用户手机短信：仅用于测试</a></dd>
