--- a/index.html
+++ b/index.html
@@ -154,9 +154,14 @@
 		<div class="ft">
 			Copyright &copy; 2012-2013 by 臭皮匠
 		</div>
+		<div class="friendlinks" id="flink">
+			<a href="http://www.shaman05.com">shaman的blog</a>
+		</div>
 		<script type="text/javascript">
 			var newsLink = document.getElementById("newslink");
+			var flink = document.getElementById("flink");
 			newsLink.style.display = "none";
+			flink.style.display = "none";
 		</script>
 	</body>
 </html>
