--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,9 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年03月01日</strong></dt>
+			<dd><a href="20120301/news2.html">微博甚火 新浪亏损 下半年游戏平台将收费</a></dd>
+			<dd><a href="20120301/news1.html">Facebook宣布推出Offers及移动广告服务</a></dd>
 			<dt><strong>2012年02月29日</strong></dt>
 			<dd><a href="20120229/news2.html">库巴网将向淘宝联盟投1亿</a></dd>
 			<dd><a href="20120229/news1.html">新浪微博注册用户突破3亿大关</a></dd>
