--- a/newslist.html
+++ b/newslist.html
@@ -11,6 +11,10 @@
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
 			<dt><strong>2012年03月01日</strong></dt>
+			<dd><a href="20120302/news3.html">当当牵手国美 电商混战上演合纵连横</a></dd>
+			<dd><a href="20120302/news2.html">Sun创始人所办移动社交网络Wayin融资1400万</a></dd>
+			<dd><a href="20120302/news1.html">敏思博客因缺钱再次关张</a></dd>
+			<dt><strong>2012年03月01日</strong></dt>
 			<dd><a href="20120301/news2.html">微博甚火 新浪亏损 下半年游戏平台将收费</a></dd>
 			<dd><a href="20120301/news1.html">Facebook宣布推出Offers及移动广告服务</a></dd>
 			<dt><strong>2012年02月29日</strong></dt>
