--- a/newslist.html
+++ b/newslist.html
@@ -10,7 +10,10 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
-			<dt><strong>2012年03月01日</strong></dt>
+			<dt><strong>2012年03月03日</strong></dt>
+			<dd><a href="20120303/news2.html">土豆网CEO王微：已为未来增长做好准备</a></dd>
+			<dd><a href="20120303/news1.html">微软在Facebook注销页面投放大幅必应广告</a></dd>
+			<dt><strong>2012年03月02日</strong></dt>
 			<dd><a href="20120302/news3.html">当当牵手国美 电商混战上演合纵连横</a></dd>
 			<dd><a href="20120302/news2.html">Sun创始人所办移动社交网络Wayin融资1400万</a></dd>
 			<dd><a href="20120302/news1.html">敏思博客因缺钱再次关张</a></dd>
