--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,12 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年03月05日</strong></dt>
+			<dd><a href="20120305/news2.html">雅虎全球研究院院长拉赫曼跳槽至谷歌</a></dd>
+			<dd><a href="20120305/news1.html">重庆网络问政平台</a></dd>
+			<dt><strong>2012年03月04日</strong></dt>
+			<dd><a href="20120304/news2.html">传Facebook再聘三投行协助IPO</a></dd>
+			<dd><a href="20120304/news1.html">Foursquare联合创始人宣布离职 保留董事职务</a></dd>
 			<dt><strong>2012年03月03日</strong></dt>
 			<dd><a href="20120303/news2.html">土豆网CEO王微：已为未来增长做好准备</a></dd>
 			<dd><a href="20120303/news1.html">微软在Facebook注销页面投放大幅必应广告</a></dd>
