--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,9 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年03月06日</strong></dt>
+			<dd><a href="20120306/news2.html">Facebook正式推出Windows桌面聊天客户端</a></dd>
+			<dd><a href="20120306/news1.html">星辰急便创始人陈平：最大错误是做成家族企业</a></dd>
 			<dt><strong>2012年03月05日</strong></dt>
 			<dd><a href="20120305/news2.html">雅虎全球研究院院长拉赫曼跳槽至谷歌</a></dd>
 			<dd><a href="20120305/news1.html">重庆网络问政平台</a></dd>
