--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,9 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年03月07日</strong></dt>
+			<dd><a href="20120307/news2.html">中国占Facebook亚洲合作开发商20%居第一</a></dd>
+			<dd><a href="20120307/news1.html">雅虎拟大重组 或裁员数千人</a></dd>
 			<dt><strong>2012年03月06日</strong></dt>
 			<dd><a href="20120306/news2.html">Facebook正式推出Windows桌面聊天客户端</a></dd>
 			<dd><a href="20120306/news1.html">星辰急便创始人陈平：最大错误是做成家族企业</a></dd>
