--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,9 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年03月08日</strong></dt>
+			<dd><a href="20120308/news2.html">传雅虎将正式起诉Facebook侵权 欲获收入抽成</a></dd>
+			<dd><a href="20120308/news1.html">库巴网创始人CEO王治全卸任 退居二线</a></dd>
 			<dt><strong>2012年03月07日</strong></dt>
 			<dd><a href="20120307/news2.html">中国占Facebook亚洲合作开发商20%居第一</a></dd>
 			<dd><a href="20120307/news1.html">雅虎拟大重组 或裁员数千人</a></dd>
