--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,15 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年03月11日</strong></dt>
+			<dd><a href="20120311/news2.html">百家化妆品网站完成“可信网站”验证</a></dd>
+			<dd><a href="20120311/news1.html">雅虎EMEA区高级副总裁将离职</a></dd>
+			<dt><strong>2012年03月10日</strong></dt>
+			<dd><a href="20120310/news2.html">美团网王兴：技术和服务是团购竞争最核心因素</a></dd>
+			<dd><a href="20120310/news1.html">Twitter创始人推出新项目：公共讨论平台Branch</a></dd>
+			<dt><strong>2012年03月09日</strong></dt>
+			<dd><a href="20120309/news2.html">腾讯微博今起实行实名注册 只针对新注册用户</a></dd>
+			<dd><a href="20120309/news1.html">外媒称Twitter亏损近亿美元 评论称此说法不实</a></dd>
 			<dt><strong>2012年03月08日</strong></dt>
 			<dd><a href="20120308/news2.html">传雅虎将正式起诉Facebook侵权 欲获收入抽成</a></dd>
 			<dd><a href="20120308/news1.html">库巴网创始人CEO王治全卸任 退居二线</a></dd>
