--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,9 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年03月12日</strong></dt>
+			<dd><a href="20120312/news2.html">Facebook宣告完成收购LBS社交网站Gowalla</a></dd>
+			<dd><a href="20120312/news1.html">盛大文学保护版权再出重拳</a></dd>
 			<dt><strong>2012年03月11日</strong></dt>
 			<dd><a href="20120311/news2.html">百家化妆品网站完成“可信网站”验证</a></dd>
 			<dd><a href="20120311/news1.html">雅虎EMEA区高级副总裁将离职</a></dd>
