--- a/newslist.html
+++ b/newslist.html
@@ -10,6 +10,9 @@
 	<body>
 		<h1>臭皮匠建站----互联网新闻列表</h1>
 		<dl>
+			<dt><strong>2012年03月13日</strong></dt>
+			<dd><a href="20120313/news2.html">两大“冤家”联姻 优酷土豆股价双双暴涨</a></dd>
+			<dd><a href="20120313/news1.html">Twitter收购轻博客平台Posterous</a></dd>
 			<dt><strong>2012年03月12日</strong></dt>
 			<dd><a href="20120312/news2.html">Facebook宣告完成收购LBS社交网站Gowalla</a></dd>
 			<dd><a href="20120312/news1.html">盛大文学保护版权再出重拳</a></dd>
